# mcp-server

./: .gitignore  README.md  pyproject.toml
ngs360_mcp_server/: __init__.py  client.py  server.py  wes_client.py
ngs360_mcp_server/tools/: __init__.py  files.py  jobs.py  manifest.py  pipelines.py  platforms.py  projects.py  qcmetrics.py  runs.py  search.py  settings.py  vendors.py  wes.py  workflows.py
