[project]
name = "ngs360-mcp-server"
version = "0.1.0"
description = "MCP Server for the NGS360 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ngs360-mcp-server = "ngs360_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
